#                    "Merged from", "Cleanup", "Issue", "Adjustment"           #
################################################################################
          1         2         3         4         5         6         7
01234567890123456789012345678901234567890123456789012345678901234567890123456789
-----------------+-----------+--------------------------------------------------
CR-2009-11-23-0: Adjustment: o fixed shadowd_migrate test to support delayed 
                               reporting period of execds for qsub -sync jobs
                 Review:     SH

HP-2009-11-22-0: Bugfix:     o Fixed issue_3179 test for more than 5 exec hosts
                             o Improved performance of issue_3179 test
                 Review:     MD

HP-2009-11-20-1: Bugfix:     Fixed qconf test with certain vi versions
                             - Changed vi commands to insert new complexes
                 Review:     CR

CR-2009-11-20-1: Adjustment: corrected path to drmaa-test.jar which has changed
                             for GE 62u5
                 Review:     DG

SH-2009-11-20-0: Enhancem.:  added issue test for IZ 3179
                 Review:     DG

CR-2009-11-20-0: Adjustment: o Fixed qsub test to support code changes for
                               delayed reporting period of execds
                 Adjustment: o Enhanced wait_for_event_client() to allow reg.
                               expressions.
                 Review:     DG

LP-2009-11-20-0: Bugfix:     Fixed dbwriter/reporting install issue
                 Enhancem.:  Improved error logging
                 Review:     AP

HP-2009-11-20-0: Bugfix:     Fixed issue_1161 test with certain vi versions
                 Issue:      313
                 Review:     CR

CR-2009-11-19-0: Bugfix:     o added missing JAVA_HOME question response to 
                               current_upgrade_test
                             o increased some timeouts