@@ -1,0 +1,104 @@
+#!/vol2/TCL_TK/glinux/bin/expect
+#___INFO__MARK_BEGIN__
+##########################################################################
+#
+#  The Contents of this file are made available subject to the terms of
+#  the Sun Industry Standards Source License Version 1.2
+#
+#  Sun Microsystems Inc., March, 2001
+#
+#
+#  Sun Industry Standards Source License Version 1.2
+#  =================================================
+#  The contents of this file are subject to the Sun Industry Standards
+#  Source License Version 1.2 (the "License"); You may not use this file
+#  except in compliance with the License. You may obtain a copy of the
+#  License at http://gridengine.sunsource.net/Gridengine_SISSL_license.html
+#
+#  Software provided under this License is provided on an "AS IS" basis,
+#  WITHOUT WARRANTY OF ANY KIND, EITHER EXPRESSED OR IMPLIED, INCLUDING,
+#  WITHOUT LIMITATION, WARRANTIES THAT THE SOFTWARE IS FREE OF DEFECTS,
+#  MERCHANTABLE, FIT FOR A PARTICULAR PURPOSE, OR NON-INFRINGING.
+#  See the License for the specific provisions governing your rights and
+#  obligations concerning the Software.
+#
+#  The Initial Developer of the Original Code is: Sun Microsystems, Inc.
+#
+#  Copyright: 2009 by Sun Microsystems, Inc.
+#
+#  All Rights Reserved.
+#
+##########################################################################
+#___INFO__MARK_END__
+
+# define global variable in this namespace
+global check_name 
+global check_category 
+global check_description 
+global check_needs
+global check_functions 
+global check_highest_level
+global check_init_level_procedure
+global check_root_access_needs
+global check_need_running_system
+
+#set check_root_access_needs "yes"
+#set check_need_running_system "no"
+
+# define a level initialization procedure:
+set check_init_level_procedure "issue_3185_init_level"
+
+# define test's name and run level descriptions
+set check_name            "issue_3185"
+set check_category        "COMPATIBILITY SYSTEM VERIFIED"
+set check_highest_level   1
+set check_description(0)  ""
+set check_description(1)  ""
+
+# define test's dependencies
+set check_needs           "init_core_system" 
+
+# setup and cleanup functions
+set check_setup_function issue_3185_setup
+set check_cleanup_function issue_3185_cleanup
+
+# define test's procedure order
+set check_functions {}
+lappend check_functions "issue_3185_test1"
+
+proc issue_3185_init_level {} {
+   global CHECK_ACT_LEVEL
+   switch -- $CHECK_ACT_LEVEL {
+      0 {
+         return 0
+      }
+   }
+   return -1  ;# no other level
+}
+
+# -------- local test procedures: initialization------------------------------
+
+proc issue_3185_setup {} {
+   global ts_config
+}
+
+proc issue_3185_cleanup {} {
+   global ts_config
+
+   delete_all_jobs
+   wait_for_end_of_all_jobs
+}
+
+
+proc issue_3185_test1 {} {
+   global ts_config CHECK_USER
+   ts_log_fine "starting not schedulable qrsh job ..."
+   set output [string trim [start_sge_bin "qrsh" "-l arch=no_existing_arch"]]
+   ts_log_fine "output: \"$output\""
+
+   # we expect one line output: "Your "qrsh" request could not be scheduled, try again later."
+   set lines [split $output "\n"]
+   if {[llength $lines] != 1} {
+      ts_log_severe "Got unexpected output for not schedulable job:\n$output\n"
+   }
+}
